--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -17,6 +17,12 @@
   min-height: 250px;
 }
 
+.button-column {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column-reverse;
+}
+
 .bottom-div {
   width: 95%;
   min-width: 725px;
@@ -37,7 +43,7 @@
   padding-left: 6px;
   padding-right: 6px;
   max-width: 200px;
-  margin-left: 2%;
+  margin: 3px;
   font-weight: bold;
   border: 1px solid #003366 !important;
   background: #f9fbfe 0% 0% no-repeat padding-box;
