[EMCRI-663] Prevent Search for Primary Contact working against userId's outside logged in user's Organization

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -27,9 +27,7 @@
           <div class="col-md-1"></div>
           <div class="col-md-5">
             <div class="legalText infoText">
-              <!-- <div class="infoIconCol"> -->
-                <mat-icon class="infoIconStyleBlue">info</mat-icon>
-              <!-- </div> -->
+                <mat-icon class="iconStyleBlue">info</mat-icon>
               <span class="iconText">
                 This is the Doing Business As (DBA) name from BCeID. Update if needed or provide a name.
               </span>
@@ -78,7 +76,7 @@
           </div>
           <div class="row">
             <div id="foundContactMsg" [class.visible]="showFoundContactMsg" class="noshow">
-              <div class="infoIconStyleGreen">
+              <div class="iconStyleGreen">
                 <mat-icon>check_circle</mat-icon>
               </div>
               <div class="col-md-11 page-subheadbold">
