--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.scss
@@ -149,19 +149,16 @@ table {
   color: #313132;
 }
 
-.infoIconCol {
-}
-
 .iconText {
   position: absolute;
 }
 
-.infoIconStyleGreen {
+.iconStyleGreen {
   //font-size: 16px;
   color: #62A370;
 }
 
-.infoIconStyleBlue {
+.iconStyleBlue {
   //font-size: 16px;
   color: #003366;
 }
