--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
@@ -7,6 +7,7 @@
 
 .card-heading {
   align-content: center;
+  color: black;
 }
 
 .review-profile-head{
@@ -44,4 +45,36 @@
 
 .missing-info {
   color: red;
+}
+table {
+    border-collapse: collapse;
+}
+
+.contacts td, th {
+    border: 1px solid #1d1212;
+    padding: 0.5rem;
+    text-align: left;
+}
+td {
+    padding-bottom: 7px;
+    padding-top: 7px;
+}
+u {
+    text-decoration: underline;
+}
+.record-title {
+    width: 275px;
+    padding-left: 5px;
+    color: black;
+}
+.contacts {
+    margin: 0 auto;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+.contacts-container {
+    padding-bottom: 5px;
+}
+.contact-title{
+    font-size: 21px;
 }
