EMCRI-564 Updating the layout

--- a/pdf-service/Templates/dfa_application_summary.mustache
+++ b/pdf-service/Templates/dfa_application_summary.mustache
@@ -23,9 +23,11 @@
         table {
             border-collapse: collapse;
         }
-
+        .contacts tr {
+            border-bottom: 1px solid #ddd;
+        }
         .contacts td, th {
-            border: 1px solid #1d1212;
+            /*border: 1px solid #1d1212;*/
             padding: 0.5rem;
             text-align: left;
         }
@@ -67,13 +69,13 @@
                         {{IndigenousGoverningBody}}
                     </td>
                 </tr>
-                <tr> <td class="record-title"> DateofDamageFrom  </td>  <td> {{DateofDamageFrom}}   </td>   </tr>
-                <tr> <td class="record-title"> DateofDamageTo  </td>  <td> {{DateofDamageTo}}   </td>   </tr>
-                <tr> <td class="record-title"> DisasterEvent  </td>  <td> {{DisasterEvent}}   </td>   </tr>
-                <tr> <td class="record-title"> CauseofDamage  </td>  <td> {{CauseofDamage}}   </td>   </tr>
-                <tr> <td class="record-title"> GovernmentType  </td>  <td> {{GovernmentType}}   </td>   </tr>
-                <tr> <td class="record-title"> OtherGoverningBody  </td>  <td> {{OtherGoverningBody}}   </td>   </tr>
-                <tr> <td class="record-title"> DescribeYourOrganization  </td>  <td> {{DescribeYourOrganization}}   </td>   </tr>
+                <tr> <td class="record-title"> Date of Damage From  </td>  <td> {{DateofDamageFrom}}   </td>   </tr>
+                <tr> <td class="record-title"> Date of Damage To  </td>  <td> {{DateofDamageTo}}   </td>   </tr>
+                <tr> <td class="record-title"> Disaster Event  </td>  <td> {{DisasterEvent}}   </td>   </tr>
+                <tr> <td class="record-title"> Cause of Damage  </td>  <td> {{CauseofDamage}}   </td>   </tr>
+                <tr> <td class="record-title"> Government Type  </td>  <td> {{GovernmentType}}   </td>   </tr>
+                <tr> <td class="record-title"> Other Governing Body  </td>  <td> {{OtherGoverningBody}}   </td>   </tr>
+                <tr> <td class="record-title"> Describe Your Organization  </td>  <td> {{DescribeYourOrganization}}   </td>   </tr>
             </table>
         </div>
         <br />
